Image size update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <mat-toolbar color="primary">
   <button mat-button (click)="sidenav.open ()" ><mat-icon>menu</mat-icon></button>
   <span>Newsmania</span>
-  <span class="example-spacer"></span>
 </mat-toolbar>
 
 <mat-sidenav-container class="container-fluid">
@@ -18,30 +17,31 @@
     </mat-list>
   </mat-sidenav>
 
+  <div class="col">
+    <mat-card class="card" *ngFor="let article of mArticles">
+      
+      <mat-card-header>
+        <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ article.source.id +'.png)'}" class="card-img-top"></div>
+        <div>
+          <mat-card-title class="card-title">{{article.title}}</mat-card-title>
+          <mat-card-subtitle>{{article.source.name}}</mat-card-subtitle>
+        </div>
+      </mat-card-header>
   
-  <mat-card class="card" *ngFor="let article of mArticles">
-    
-    <mat-card-header>
-      <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ article.source.id +'.png)'}" class="card-img-top"></div>
-      <div class="card-body">
-        <mat-card-title class="card-title">{{article.title}}</mat-card-title>
-        <mat-card-subtitle>{{article.source.name}}</mat-card-subtitle>
-      </div>
-    </mat-card-header>
-
-    <mat-card-content>
-      <img mat-card-image class="img-article" src={{article.urlToImage}} alt="">
-      <p>
-        {{article.description}}
-      </p>
-    </mat-card-content>
-
-    <mat-card-actions class="action-buttons">
-      <button mat-button color="primary"><mat-icon>thumb_up_alt</mat-icon> 12 Likes</button>
-      <button mat-button color="primary"><mat-icon>comment</mat-icon> Comments</button>
-      <button mat-button color="primary"><mat-icon>share</mat-icon> Share</button>
-      <a mat-button color="primary" href={{article.url}} target="_blank" ><mat-icon>visibility</mat-icon> More</a>
-    </mat-card-actions>
-
-  </mat-card>
+      <mat-card-content>
+        <img mat-card-image class="img-article" src={{article.urlToImage}} alt="">
+        <p>
+          {{article.description}}
+        </p>
+      </mat-card-content>
+  
+      <mat-card-actions class="action-buttons">
+        <button mat-button color="primary"><mat-icon>thumb_up_alt</mat-icon> 12 Likes</button>
+        <button mat-button color="primary"><mat-icon>comment</mat-icon> Comments</button>
+        <button mat-button color="primary"><mat-icon>share</mat-icon> Share</button>
+        <a mat-button color="primary" href={{article.url}} target="_blank" ><mat-icon>visibility</mat-icon> More</a>
+      </mat-card-actions>
+  
+    </mat-card>
+  </div>
 </mat-sidenav-container>
