--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,3 @@
-.example-spacer {
-    flex: 1 1 auto;
-  }
-  
   .example-card{
       margin-top: 4px;
   }
@@ -9,26 +5,15 @@
   .example-header-image { 
     background-size: cover;
   }
-  
-  .title{
-      font-weight: bold;
-  }
-  
+    
   .img-article{
-      height: auto;
-      max-width: 50%;
+      max-width: 600px;
   }
   
   .action-buttons{
       text-align: center;
   }
-  
-  .example-container {
-      width: 100%;
-      height: auto;
-      border: 1px solid rgba(111, 111, 111, 0.50);
-  }
-  
+    
   .example-sidenav-content {
       display: flex;
       height: 75%;
@@ -36,9 +21,9 @@
       justify-content: center;
   }
   
-  .example-sidenav {
+  /* .example-sidenav {
       padding: 20px;
-  }
+  } */
   
   .source-name {
       margin-left:5px; 
