--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,9 +36,9 @@
       </mat-card-content>
   
       <mat-card-actions class="action-buttons">
-        <button mat-button color="primary"><mat-icon>thumb_up_alt</mat-icon> 12 Likes</button>
-        <button mat-button color="primary"><mat-icon>comment</mat-icon> Comments</button>
-        <button mat-button color="primary"><mat-icon>share</mat-icon> Share</button>
+        <button mat-button color="primary"><mat-icon>thumb_up_alt</mat-icon></button>
+        <button mat-button color="primary"><mat-icon>comment</mat-icon></button>
+        <button mat-button color="primary"><mat-icon>share</mat-icon></button>
         <a mat-button color="primary" href={{article.url}} target="_blank" ><mat-icon>visibility</mat-icon> More</a>
       </mat-card-actions>
   
