--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,40 +8,39 @@
   <mat-sidenav #sidenav class="example-sidenav">
     <mat-list class="list-nav">
         <mat-list-item class="list-item" *ngFor="let source of mSources" (click)="searchArticles(source.id);sidenav.close();">
-
-          <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ source.id +'.png)'}" class="example-header-image"></div>
-
+          <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ source.id +'.png)'}"></div>
           <span class="source-name"> {{source.name}}</span>
-
         </mat-list-item>
     </mat-list>
   </mat-sidenav>
-
-  <div class="col">
-    <mat-card class="card" *ngFor="let article of mArticles">
-      
-      <mat-card-header>
-        <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ article.source.id +'.png)'}" class="card-img-top"></div>
-        <div>
-          <mat-card-title class="card-title">{{article.title}}</mat-card-title>
-          <mat-card-subtitle>{{article.source.name}}</mat-card-subtitle>
-        </div>
-      </mat-card-header>
   
-      <mat-card-content>
-        <img mat-card-image class="img-article" src={{article.urlToImage}} alt="">
-        <p>
-          {{article.description}}
-        </p>
-      </mat-card-content>
-  
-      <mat-card-actions class="action-buttons">
-        <button mat-button color="primary"><mat-icon>thumb_up_alt</mat-icon></button>
-        <button mat-button color="primary"><mat-icon>comment</mat-icon></button>
-        <button mat-button color="primary"><mat-icon>share</mat-icon></button>
-        <a mat-button color="primary" href={{article.url}} target="_blank" ><mat-icon>visibility</mat-icon> More</a>
-      </mat-card-actions>
-  
-    </mat-card>
+  <div class="container-fluid">
+    <div class="row align-items-start">
+      <mat-card class="card" *ngFor="let article of mArticles">
+        <mat-card-header>
+          <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ article.source.id +'.png)'}" class="card-img-top"></div>
+          <div>
+            <mat-card-title class="card-title">{{article.title}}</mat-card-title>
+            <mat-card-subtitle>{{article.source.name}}</mat-card-subtitle>
+          </div>
+        </mat-card-header>
+    
+        <mat-card-content>
+          <img mat-card-image class="img-article" src={{article.urlToImage}} alt="">
+          <p>
+            {{article.description}}
+          </p>
+        </mat-card-content>
+    
+        <mat-card-actions class="action-buttons">
+          <button mat-button color="primary"><mat-icon>thumb_up_alt</mat-icon></button>
+          <button mat-button color="primary"><mat-icon>comment</mat-icon></button>
+          <button mat-button color="primary"><mat-icon>share</mat-icon></button>
+          <a mat-button color="primary" href={{article.url}} target="_blank" ><mat-icon>visibility</mat-icon></a>
+        </mat-card-actions>
+    
+      </mat-card>
+    </div>
   </div>
+
 </mat-sidenav-container>
